<resources>
    <string name="app_name">Push</string>
    <string name="title_activity_main">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="send_push_notification">Send Push</string>
    <string name="create_user">Create User</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="login">Login</string>
    <string name="enter_message">Enter message</string>
    <string name="recipient_username">Recipient Username</string>
    <string name="send">Send</string>
    <string name="messaging">Messaging</string>
    <string name="weather">Weather</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sync_header">Sync</string>
    <string name="sync_title">Receive push notifications</string>
    <string name="settings">Settings</string>
    <string name="channel_name">Just a channel</string>
    <string name="channel_description">This is some random stuff to show</string>
</resources>